@@ -3043,13 +3043,17 @@ focus_tree = {
 			log = "[GetDateText]: [Root.GetName]: Focus ETH_eritrea_annex"
 			228 = { add_core_of = ETH }
 			229 = { add_core_of = ETH }
-			1078 = { add_core_of = ETH }
+			1077 = { add_core_of = ETH }
 			clear_variable = ETH_eritrean_acceptance
 			clear_variable = ETH_amharic_speakers
 			clear_variable = ETH_propaganda_distribution
 			clear_variable = ETH_crackdown_on_bozos
 			newline = yes
 			remove_ideas = ETH_dissolved_the_assembly
+			if = {
+				limit = { has_idea = ETH_eritrean_friction }
+				remove_ideas = ETH_eritrean_friction
+			}
 		}
 
 		ai_will_do = {
