@@ -4446,16 +4446,16 @@ focus_tree = {
 			if = {
 				limit = { has_dlc = "By Blood Alone" }
 				add_equipment_to_stockpile = {
-					type = cv_medium_plane_fighter_airframe_2
+					type = cv_medium_plane_airframe_2
 					variant_name = "Rafale M"
-					amount = 12
+					amount = 24
 					producer = FRA
 				}
 			}
 			else = {
 				add_equipment_to_stockpile = {
-					type = MR_Fighter3
-					amount = 12
+					type = MR_Fighter1
+					amount = 36
 					producer = FRA
 				}
 			}
