@@ -4285,6 +4285,7 @@ equipment_modules = {
 			reliability = -0.02
 			soft_attack = 1.2
 			hard_attack = 0.5
+			air_attack = 0.03
 			build_cost_ic = 0.65
 		}
 		multiply_stats = {
@@ -4330,6 +4331,7 @@ equipment_modules = {
 			maximum_speed = -0.25
 			soft_attack = 1.4
 			hard_attack = 0.5
+			air_attack = 0.06
 		}
 		multiply_stats = {
 			defense = 0.07
@@ -4374,6 +4376,7 @@ equipment_modules = {
 			maximum_speed = -0.25
 			soft_attack = 1.6
 			hard_attack = 0.5
+			air_attack = 0.09
 		}
 		multiply_stats = {
 			defense = 0.09
@@ -4418,6 +4421,7 @@ equipment_modules = {
 			maximum_speed = -0.375
 			soft_attack = 1.8
 			hard_attack = 0.5
+			air_attack = 0.12
 		}
 
 		multiply_stats = {
@@ -5501,12 +5505,12 @@ equipment_modules = {
 		sfx = sfx_ui_sd_module_turret
 
 		add_stats = {
-			soft_attack = 40
-			hard_attack = 40
+			soft_attack = 55
+			hard_attack = 55
 			ap_attack = 210
 			build_cost_ic = 54.6
 			maximum_speed = -6
-			reliability = -0.
+			reliability = -0.35
 		}
 		xp_cost = 3
 		can_convert_from = {
