@@ -24,6 +24,10 @@ v1.12.1
   - Increased the gain for the trade autonomy decision from -0.08 to -0.12
   - Reduced the time to execute the USA decision "Execute Operation Enduring Freedom (OEF)" from 30 to 15 days
   - Increased the cost of MBTs in the international market from 0.022 to 0.032
+  - Added a reliability penalty to the Double Barrel Tank Cannon and increased the soft and hard attack of the module so the cost is more worthwhile
+  - Added back a small anti-air bonus to the HMG modules
+  - African Literacy Rate now has a larger impact on the literacy rate of a nation for Africa
+  - Added a penalty to the literacy rate for countries with high corruption
 
  Bugfix:
   - Bulgarian & Serbian arms deal has been removed and replaced with a international market income modifier of 20%
@@ -43,6 +47,10 @@ v1.12.1
   - Fixed the country flag decisions not showing up properly as well as optimized their checks
   - Fixed the APC/IFVs not properly being added to the division template after researching specific techs
   - Fixed the Iraq decision "Aramco Control" not properly triggering when you have 90% to 99.98% control
+  - Fixed theLibyan focus "Islam Over Libya" not properly giving influence to a random country and sometimes giving influence to itself
+  - Fixed the Ethiopian focus "Eritrean Annexation" not properly removing the "Eritrean Friction" idea if you have it from the Eritrean integration efforts decisions
+  - Fixed the Ethiopian focus "Annex Eritrea" not properly adding the core of Eritrea to Ethiopia for the islands off of the coast of Eritrea
+  - Fixed the Indonesian focus "Purchase Rafale" not properly giving the Rafale M to Indonesia when the decision is taken
 
  Content:
   - Remove the 2017 start date
@@ -65,6 +73,7 @@ v1.12.1
   - Fixed the engine type slot icons for the various tank chassis for custom nation blueprints
   - Reworked the internal policies, laws, and statistics icons to be sleeker
   - Fixed the helicopters showing up as tanks in the equipment designer for some nations
+  - Added a new icon for the "MLRS Battalioon"
 
  Localization:
   - Improved the localization for the Greek decision mechanic for Cyprus
